普通修改及wiki导入

--- a/jamstack-2021-08-20/collection.ini
+++ b/jamstack-2021-08-20/collection.ini
@@ -1,6 +1,6 @@
 [Learning]
-Outstanding day=4
-Last Auto-postpone=4
+Outstanding day=6
+Last Auto-postpone=6
 Sound Mode=0
 Success Sound=0
 Failure Sound=0
@@ -20,7 +20,7 @@ Topic Sorting=12
 Topic Proportion=5
 Auto-sort=1
 Auto-postpone=1
-Last Auto-sort=4
+Last Auto-sort=6
 [Window]
 Contents=[130,130,1440,753,0]
 Element=[341,138,1142,798,0]
@@ -30,7 +30,7 @@ ImgDownload=[533,204,853,623,0]
 Analysis=[398,147,1123,721,0]
 Find=[630,438,659,155,0]
 Scaler=[678,361,563,310,0]
-Browser=[295,98,1440,754,0]
+Browser=[295,98,1105,754,0]
 [Defaults]
 Question Font Name=Arial
 Question Font Size=9
@@ -77,27 +77,27 @@ Maximized=0
 MembersWidth=359
 ElementsHeight=150
 [Stats]
-Day=4
-Item Burden=14.1779151404335
-Topic Burden=31.5428571428347
-Repetitions=5
-Lapses=2
-Time=0.404764421298752
-RepTime=0.000867129623657092
-Max outstanding=173
-SM16 R=0.938740361682321
-SM17 R=0.959648929849452
-SM16 Metric=0.579609134776138
-SM17 Metric=0.621941896364456
-Recall=0.6
-SM16vSM17 metric cases=5
+Day=6
+Item Burden=25.2426337552606
+Topic Burden=40.4099567098892
+Repetitions=9
+Lapses=4
+Time=0.14849403934204
+RepTime=0.00184480325697223
+Max outstanding=165
+SM16 R=0.829294585976166
+SM17 R=0.893564923002504
+SM16 Metric=0.491093855188915
+SM17 Metric=0.544011995364434
+Recall=0.636363636363636
+SM16vSM17 metric cases=11
 [Navigation]
-Synchronize Element with Contents=1
+Synchronize Element with Contents=0
 Auto-Scroll Contents=0
 Auto-Sort Contents=0
 Next Element Mode=1
 [Concepts]
-Current Concept=3
+Current Concept=7
 [Append]
 Current Tasklist=1
 Children Limit=100
@@ -106,7 +106,7 @@ Edit On Click=1
 Compile Lexicon=0
 Default Element=0
 Level=3
-Last recovery=44428.9644052083
+Last recovery=44430.8082662037
 [Storage]
 Secondary=
 [Path]
@@ -121,12 +121,12 @@ Video=
 Style=
 Script=
 Binary=
-Imports=
+Imports=E:\Downloads\wiki
 Backup=F:\Software\SuperMemo\backup
 Transfer=
 Replace filter=
 Sleep logs=
-Background picture=e:\onedrive\4-个人资料\abc of supermemo 18 (copy)\images\\background.PNG
+Background picture=
 Last backup=F:\Software\SuperMemo\backup\(((Backup of abc of supermemo 18 created on 2021-08-17 07-17-13)))
 Last backup size=831.539 kB
 [Default]
@@ -180,7 +180,7 @@ Column10 Width=43
 Column11 Name=FirstRep
 Column11 Width=120
 Column12 Name=Dif
-Column12 Width=33
+Column12 Width=34
 Column13 Name=FI
 Column13 Width=29
 Column14 Name=AF
